修改主題頁

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: 笨方法学写作
+title: 開始寫字
 header-img: "img/Xacebook.jpg"
 tagline: "cn"  
 description: "笨方法学写作|这一次彻底学会写作"  
 baseurl: ""
-url: "http://www.cnfeat.com"  
+url: "http://onefive9.cc"  
 
 # About/contact
 owner: 
-  name: "陈素封"
-  email: CNFeat@gmail.com
-  bio: "笨方法学写作"
+  name: "嚴京城"
+  email: yjcdoc@gmail.com
+  bio: "就這樣寫"
 
 # Data
 gavatar: img/favicon1.ico
